[package]
name = "mock-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-rustls = "0.23"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
matchit = "0.8.4"
